<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    android:backgroundTintMode="multiply">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/text_old_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="@color/custom_black"
            android:textColorHint="@color/custom_placeholder"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/etNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/text_new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="14dp"
            android:textColor="@color/custom_black"
            android:textColorHint="@color/custom_placeholder"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="@+id/etOldPassword"
            app:layout_constraintStart_toStartOf="@+id/etOldPassword"
            app:layout_constraintTop_toBottomOf="@id/etOldPassword"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/button_background"
            android:text="@string/text_submit"
            app:layout_constraintEnd_toEndOf="@id/etNewPassword"
            app:layout_constraintStart_toStartOf="@id/etNewPassword"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/primary_70"
        android:visibility="gone" />

</RelativeLayout>